# user_management_service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: test.yml
scripts/: entrypoint.sh
src/: config.py  logger.py  logger_config.py  main.py  settings.py
src/api/dependencies/: auth.py  database.py  rabbitmq.py  redis.py
src/api/routes/: __init__.py  auth.py  health.py  root.py  user.py  users.py
src/aws/: s3_service.py
src/db/: __init__.py  session.py
src/db/migration/: env.py
src/db/migration/versions/: 01e1470a7a5b_initial_revision.py  436e9d00413b_initial_revision.py  a64bd6dd8906_initial_migration.py  b6bd8c027cd6_changed_password_length_in_user_model.py  c295e62e7071_update_user_model.py
src/db/models/: __init__.py  base.py  group.py  user.py
src/schemas/: auth.py  group.py  root.py  user.py
src/services/: auth.py  password_reset.py  user.py
src/utils/: exceptions.py  jwt_bearer.py  jwt_manager.py  pass_manager.py  password_manager.py  security.py
tests/: conftest.py
tests/integration/: test_auth.py  test_health.py  test_root.py  test_user.py  test_users.py
tests/test_schemas/: test_user.py
tests/unit/: test_jwt_manager.py  test_password_manager.py
tests/unit/test_schemas/: test_auth_schema.py  test_group_schema.py  test_health_schema.py  test_user_schema.py
