[project]
name = "ums"
version = "0.1.0"
description = ""
authors = [
    {name = "yevhenii"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=5.2.1,<6.0.0)",
    "aioboto3 (>=13.4.0,<14.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "types-passlib (>=1.7.7.20241221,<2.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
ruff = "^0.9.3"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"

[tool.black]
line-length = 79
target-version = ['py311']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
skip = ["UMS/.venv"]

[tool.mypy]
#plugins = ['pydantic.mypy']
ignore_missing_imports = true
disallow_untyped_defs = true

#[tool.pydantic-mypy]
#init_forbid_extra = true
#init_typed = true
#warn_required_dynamic_aliases = true
